build: 스프링 시큐티리를 위한 의존성 추가

--- a/be/build.gradle
+++ b/be/build.gradle
@@ -29,6 +29,13 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// 스프링 시큐리티를 사용하기 위한 스타터 추가
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// 타임리프에서 스프링 시큐리티를 사용하기 위한 의존성 추가
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	// 스프링 시큐리티를 테스트하기 위한 의존성 추가
+	implementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
