--- a/be/build.gradle
+++ b/be/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	// 스프링 시큐리티를 테스트하기 위한 의존성 추가
 	testImplementation 'org.springframework.security:spring-security-test'
 
+	// openvidu 사용을 위한 의존성 추가
+	implementation 'io.openvidu:openvidu-java-client:2.28.0'
 }
 
 tasks.named('test') {
