feat: OAuth2 기능 구현 및 테스트 완료. "내가 이겼다, OAuth2." (#21)

--- a/be/build.gradle
+++ b/be/build.gradle
@@ -1,60 +1,40 @@
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.14'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'com.ygd'
 version = '0.0.1-SNAPSHOT'
-
-java {
-	sourceCompatibility = '11'
-}
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok'
-	testAnnotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
-
-	// h2database 사용
 	runtimeOnly 'com.h2database:h2'
 
-	// 스프링 시큐리티를 사용하기 위한 스타터 추가
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	// 타임리프에서 스프링 시큐리티를 사용하기 위한 의존성 추가
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-	// 스프링 시큐리티를 테스트하기 위한 의존성 추가
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+	testImplementation 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-
-	// 자바 JWT 라이브러리
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	// XML 문서와 Java 객체 간 매핑을 자동화
-	implementation 'javax.xml.bind:jaxb-api:2.3.1'
-	// Configuration Processor 어노테이션
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-
-	// OAuth2를 사용하기 위한 스타터 추가
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
