--- a/be/build.gradle
+++ b/be/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	implementation 'mysql:mysql-connector-java:8.0.33'
 
 	runtimeOnly 'com.h2database:h2'
 
