--- a/be/build.gradle
+++ b/be/build.gradle
@@ -23,18 +23,11 @@ dependencies {
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	implementation 'mysql:mysql-connector-java:8.0.33'
 
-	runtimeOnly 'com.h2database:h2'
-
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
-	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-
-
-	// h2database 사용
-	runtimeOnly 'com.h2database:h2'
-
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 	testImplementation 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
