--- a/fe/grab-front-app/package.json
+++ b/fe/grab-front-app/package.json
@@ -19,10 +19,14 @@
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "stomp": "^0.1.1",
     "stompjs": "^2.3.3",
     "stream-browserify": "^3.0.0",
