--- a/fe/grab-front-app/package.json
+++ b/fe/grab-front-app/package.json
@@ -10,12 +10,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gsap": "^2.1.3",
+    "axios": "^1.4.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
-    "axios": "^1.4.0",
+    "gsap": "^2.1.3",
     "https-browserify": "^1.0.0",
     "openvidu-browser": "^2.20.0",
     "os-browserify": "^0.3.0",
@@ -32,6 +32,7 @@
     "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
     "stomp": "^0.1.1",
     "stompjs": "^2.3.3",
     "stream-browserify": "^3.0.0",
